# pointcloud_to_2dmap_ros2

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
launch/: pointcloud_to_2dmap.launch.py
src/: pointcloud_to_2dmap.cpp
